--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "@inertiajs/inertia": "^0.11.1"
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/server": "^0.1.0",
+        "react-icons": "^5.4.0"
     }
 }
