--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/server": "^0.1.0",
+        "dayjs": "^1.11.13",
         "react-icons": "^5.4.0"
     }
 }
