feat: edit log & fix: image rotation

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "@inertiajs/server": "^0.1.0",
         "antd": "^5.22.5",
         "dayjs": "^1.11.13",
+        "firebase": "^11.1.0",
+        "firebase-admin": "^13.0.2",
         "react-flatpickr": "^3.10.13",
         "react-icons": "^5.4.0"
     }
