--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "minishlink/web-push": "^9.0",
+        "spatie/laravel-permission": "^6.16",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
